changes to test_cartpole

--- a/test_cartpole.ipynb
+++ b/test_cartpole.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing Q_Learner class on CartPole\n",
+    "We test if the Q_Learner class performs significantly better than an agent which plays without caring of the environment state.\n",
+    "\n",
+    "Spoiler: it does. By setting by hand two features, the agent learn how to exploit the information they carry.\n",
+    "\n",
+    "CartPole info:\n",
+    "\n",
+    "\n",
+    "https://gym.openai.com/envs/CartPole-v0/\n",
+    "\n",
+    "\n",
+    "https://github.com/openai/gym/blob/master/gym/envs/classic_control/cartpole.py"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Overload the abstract method features()\n",
     "class My_Q_Learner(Q_Learner):\n",
     "    def features(self, state, action):\n",
+    "        feat1 = state[2:3]\n",
     "        action_sign = 2*action - 1\n",
-    "        feat1 = np.abs([state[2] + action_sign])\n",
-    "        return np.concatenate((state, feat1))\n",
-    "    \n",
-    "    def environment(self):\n",
-    "        return gym.make('CartPole-v0')"
+    "        feat2 = np.abs([state[2] + action_sign])\n",
+    "        bias = np.ones(1)\n",
+    "        return np.concatenate((feat1, feat2, bias))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -37,44 +55,49 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--> Game Over. Rounds: 8 | Score: 8.0\n",
+      "--> Game Over. Rounds: 55\n",
       "Parameter vector:\n",
-      "[ 0.70328656  0.46409958 -0.00767335 -0.2577557  -0.47276073]\n",
+      "[0.47859214 0.63075309 0.61081921]\n",
       "\n",
-      "--> Game Over. Rounds: 25 | Score: 25.0\n",
+      "--> Game Over. Rounds: 68\n",
       "Parameter vector:\n",
-      "[-0.04097099 -0.05413197  0.07501933  0.12186901  0.98737589]\n",
+      "[0.32977605 0.6754387  0.65956828]\n",
       "\n",
-      "--> Game Over. Rounds: 38 | Score: 38.0\n",
+      "--> Game Over. Rounds: 75\n",
       "Parameter vector:\n",
-      "[-0.05292808 -0.05943205  0.08768303  0.10019524  0.98789628]\n",
+      "[0.29507237 0.69325869 0.65751402]\n",
       "\n",
-      "--> Game Over. Rounds: 42 | Score: 42.0\n",
+      "--> Game Over. Rounds: 27\n",
       "Parameter vector:\n",
-      "[-0.08626871 -0.00987788  0.0888658   0.00929289  0.99220797]\n",
+      "[0.27911566 0.69605562 0.66151419]\n",
       "\n",
-      "--> Game Over. Rounds: 24 | Score: 24.0\n",
+      "--> Game Over. Rounds: 49\n",
       "Parameter vector:\n",
-      "[-0.06052526  0.01004273  0.07872077  0.04277701  0.99408702]\n",
+      "[0.3075713  0.68384956 0.66162654]\n",
       "\n",
-      "--> Game Over. Rounds: 51 | Score: 51.0\n",
+      "--> Game Over. Rounds: 33\n",
       "Parameter vector:\n",
-      "[-0.06998458 -0.05788397  0.08698238  0.15210352  0.98033167]\n"
+      "[0.29510691 0.6906043  0.66028601]\n"
      ]
     }
    ],
    "source": [
+    "# Generate the environment\n",
     "env = gym.make('CartPole-v0')\n",
     "\n",
+    "# Parameters\n",
     "actions_arr = np.arange(env.action_space.n)\n",
-    "d = 5\n",
+    "d = 3 # <--- set the right number of features\n",
     "learning_rate = 0.01\n",
     "epsilon = 0.9\n",
     "discount_factor = 0.95\n",
     "\n",
+    "# Initialize the agent\n",
     "agent = My_Q_Learner(actions_arr, d, learning_rate, \n",
     "                     epsilon, discount_factor)\n",
     "\n",
+    "# Train the agent on a number of matches (num_episodes)\n",
+    "# For each episode count the number of rounds the agent survived\n",
     "num_episodes = 500\n",
     "for i in range(num_episodes):\n",
     "    state = env.reset()\n",
@@ -95,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -105,11 +128,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--> Game Over. Rounds: 40\n"
+      "--> Game Over. Rounds: 45\n"
      ]
     }
    ],
    "source": [
+    "# Watch the trained agent playing\n",
     "import time\n",
     "state = env.reset()\n",
     "done = False\n",
@@ -124,13 +148,6 @@
     "print(\"\\n--> Game Over. Rounds: {}\".format(rounds))\n",
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
