Inverse_Learner tested

--- a/test_Q_Learner_CartPole.ipynb
+++ b/test_Q_Learner_CartPole.ipynb
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
     "import numpy as np\n",
-    "from LearningAlgorithms.q_learner import Q_Learner"
+    "from Modules import Q_Learner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,37 +47,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fra/Softwares/anaconda3/envs/pytorch/lib/python3.6/site-packages/gym/envs/registration.py:14: PkgResourcesDeprecationWarning: Parameters to load are deprecated.  Call .resolve and .require separately.\n",
+      "  result = entry_point.load(False)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "--> Game Over. Rounds: 55\n",
+      "--> Game Over. Rounds: 54\n",
       "Parameter vector:\n",
-      "[0.47859214 0.63075309 0.61081921]\n",
+      "[-0.76997     0.57574827  0.27506385]\n",
       "\n",
-      "--> Game Over. Rounds: 68\n",
+      "--> Game Over. Rounds: 24\n",
       "Parameter vector:\n",
-      "[0.32977605 0.6754387  0.65956828]\n",
+      "[0.32158083 0.68152317 0.65735222]\n",
       "\n",
-      "--> Game Over. Rounds: 75\n",
+      "--> Game Over. Rounds: 54\n",
       "Parameter vector:\n",
-      "[0.29507237 0.69325869 0.65751402]\n",
+      "[0.29633594 0.689978   0.66039032]\n",
       "\n",
-      "--> Game Over. Rounds: 27\n",
+      "--> Game Over. Rounds: 54\n",
       "Parameter vector:\n",
-      "[0.27911566 0.69605562 0.66151419]\n",
+      "[0.27122152 0.69303202 0.66794125]\n",
       "\n",
-      "--> Game Over. Rounds: 49\n",
+      "--> Game Over. Rounds: 39\n",
       "Parameter vector:\n",
-      "[0.3075713  0.68384956 0.66162654]\n",
+      "[0.29829979 0.68789529 0.66167764]\n",
       "\n",
-      "--> Game Over. Rounds: 33\n",
+      "--> Game Over. Rounds: 34\n",
       "Parameter vector:\n",
-      "[0.29510691 0.6906043  0.66028601]\n"
+      "[0.30291693 0.68789696 0.65957495]\n"
      ]
     }
    ],
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -128,7 +136,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--> Game Over. Rounds: 45\n"
+      "--> Game Over. Rounds: 48\n"
      ]
     }
    ],
