--- a/test_Inverse_Learner_CartPole.ipynb
+++ b/test_Inverse_Learner_CartPole.ipynb
@@ -30,25 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fra/Softwares/anaconda3/envs/pytorch/lib/python3.6/site-packages/gym/envs/registration.py:14: PkgResourcesDeprecationWarning: Parameters to load are deprecated.  Call .resolve and .require separately.\n",
-      "  result = entry_point.load(False)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "--> Game Over. Rounds: 53\n",
+      "--> Game Over. Rounds: 25\n",
       "Parameter vector:\n",
-      "[0.33598688 0.67030228 0.66167036]\n"
+      "[0.31061393 0.67881907 0.66537482]\n"
      ]
     }
    ],
@@ -87,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On average, the agent survives 41.64 rounds.\n",
+      "On average, the agent survives 40.65 rounds.\n",
       "\n"
      ]
     }
@@ -115,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,15 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expert parameters:\t[0.33598688 0.67030228 0.66167036]\n",
-      "Imitator parameters:\t[-0.07825517  0.73000616  0.6789456 ]\n"
+      "Expert parameters:\t[0.31061393 0.67881907 0.66537482]\n",
+      "Imitator parameters:\t[-0.10532795  0.75463545  0.64763521]\n"
      ]
     }
    ],
@@ -235,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On average, the agent survives 41.33 rounds.\n",
+      "On average, the imitator survives 41.88 rounds.\n",
       "\n"
      ]
     }
